--- a/MyCreations/Creation 1/css/style.css
+++ b/MyCreations/Creation 1/css/style.css
@@ -3,6 +3,8 @@
     --font: #161616;
     --pure: #FFFFFF;
     --primary: #3DCFD3;
+    --secondary: #070606;
+    --light: #F2F2F2;
 }
 
 body {
@@ -11,10 +13,13 @@ body {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
+    user-select: none;
 }
 
 header {
     background-color: var(--primary);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 80% 89%, 0 100%);
+    height: 600px;
 }
 
 .container {
@@ -89,4 +94,83 @@ header nav .left a:hover {
 
 .about .right h1 span {
     color: var(--font);
+}
+
+section.aboutMe {
+    padding: 6rem;
+    justify-content: center;
+    background: var(--font);
+    margin-top: -70px;
+    max-height: 200px;
+}
+
+section.aboutMe .container {
+    max-width: 100%;
+    text-align: center;
+    color: var(--pure);
+}
+
+section.aboutMe span {
+    color: var(--primary);
+}
+
+
+/* for projects section */
+
+section.projects {
+    padding: 6rem;
+    margin-top: 0px;
+    background-color: var(--light);
+}
+
+.section-heading {
+    text-align: center;
+    color: var(--secondary);
+    margin-bottom: 1rem;
+    line-height: 0.5;
+}
+
+section.projects .card-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 2rem;
+    grid-row-gap: 6rem;
+    margin-top: 5rem;
+}
+
+section.projects .card-wrapper .card {
+    background-color: var(--pure);
+    text-align: center;
+    padding: 3rem 2rem;
+    position: relative;
+    transition: all 1s ease;
+}
+
+section.projects .card-wrapper .card .project-logo {
+    position: absolute;
+    top: -2.8rem;
+    left: 50%;
+    margin: 0;
+    padding: 1rem;
+    max-width: 60px;
+    transform: translateX(-50%);
+}
+
+section.projects .card-wrapper .card h2 {
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+section.projects .card-wrapper .card p {
+    color: var(--ternary);
+    line-height: 1.6rem;
+}
+
+section.projects .card-wrapper .card:hover {
+    background-color: var(--secondary);
+    color: var(--light);
+}
+
+section.projects .card-wrapper .card .link-logo {
+    max-width: 30px;
 }
